# parser-playground

./: Cargo.toml
skv/: Cargo.toml
skv-core/: Cargo.toml
skv-core/src/: lib.rs
skv-macros/: Cargo.toml
skv-macros/src/: lib.rs
skv/src/: error.rs  key.rs  key_value_pair.rs  main.rs  schema.rs  skv.rs  util.rs  value.rs
skv/src/primitives/: boolean.rs  enumstring.rs  mod.rs  string.rs
src/: error.rs  key.rs  key_value_pair.rs  lib.rs  main.rs  schema.rs  skv.rs  util.rs  value.rs
src/primitives/: boolean.rs  double.rs  integer.rs  mod.rs  string.rs
