[workspace]
package.version = "0.1.0"
resolver = "3"
members = ["skv", "skv-core", "skv-macros"]

[workspace.dependencies]
ascii = "1.1.0"
derive_more = { version = "2.1.1", features = ["as_ref", "into", "from"] }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.18"